# rag-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .trivyignore  CLAUDE.md  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml  eval.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
docs/: api.md  architecture.md  configuration.md  finetune.md
docs/bruno/: bruno.json
docs/bruno/environments/: local.bru
docs/bruno/requests/: 01_chat.bru  02_chat_stream.bru  03_agent.bru  04_agent_run.bru  05_ingest_text.bru  06_job_status.bru  07_ocr.bru  08_keys_create.bru  09_health.bru
frontend/: Dockerfile  README.md  next.config.mjs  package-lock.json  package.json
frontend/app/: layout.tsx
frontend/app/chat/: page.tsx
frontend/components/: ChatWindow.tsx  InputBar.tsx  MessageBubble.tsx  MetaBadges.tsx  SettingsModal.tsx  SourceList.tsx
frontend/lib/: api.ts
infra/grafana/dashboards/: rag_agent.json
infra/grafana/provisioning/dashboards/: provider.yaml
infra/n8n/: workflow_competitive_intel.json
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
scripts/: eval_ocr.py  eval_rag.py
scripts/finetune/: eval_finetuned.py  prepare_dataset.py  train.py
src/rag_agent/: cli.py
src/rag_agent/api/: main.py
src/rag_agent/api/v1/: agent.py  agent_run.py  chat.py  deps.py  evaluate.py  ingest.py  jobs.py  keys.py  ocr.py  webhooks.py
src/rag_agent/core/: celery_app.py  config.py  exceptions.py  logging.py
src/rag_agent/dashboard/: app.py
src/rag_agent/models/: database.py  schemas.py
src/rag_agent/services/: agent_memory.py  agent_tools.py  chunker.py  document_loader.py  embedder.py  graph.py  guardrails.py  ingestion_tasks.py  langfuse_client.py  llm_client.py  model_router.py  multi_agent.py  rag_pipeline.py  retriever.py  semantic_cache.py  vector_store.py
src/rag_agent/services/ocr/: extractor.py  pipeline.py  preprocessor.py  schemas.py
tests/: conftest.py
tests/eval/: qa_dataset.json
tests/fixtures/: ocr_dataset.json
tests/integration/: test_agent_endpoint.py  test_agent_run_endpoint.py  test_chat_endpoint.py  test_ingest_endpoint.py  test_ocr_endpoint.py
tests/load/: locustfile_rag.py
tests/unit/: test_agent.py  test_agent_memory.py  test_agent_tools.py  test_bm25.py  test_chat.py  test_chunker.py  test_cli.py  test_deps.py  test_document_loader.py  test_embedder.py  test_evaluate.py  test_guardrails.py  test_health.py  test_ingest.py  test_ingestion_tasks.py  test_jobs.py  test_langfuse_client.py  test_llm_client.py  test_model_router.py  test_ocr_extractor.py  test_ocr_pipeline.py  test_ocr_preprocessor.py  test_ocr_schemas.py  test_rag_pipeline.py  test_retriever.py  test_semantic_cache.py  test_vector_store.py  test_webhooks.py
